# IMCPP-Server

./: CMakeLists.txt  README.md
conf/: ChatMsgService.conf  DepartService.conf  FriendService.conf  GroupService.conf  IMData.sql  LoginServer.conf  LoginService.conf  LoginService_1.conf  MsgServer.conf  MsgServer_1.conf  UserMsgService.conf
lua/: admin.lua  alldepart.lua  allgroup.lua  chatmsg.lua  departchatmsg.lua  departuser.lua  friend.lua  groupchatmsg.lua  groupuser.lua
src/: CMakeLists.txt
src/ChatServer/: CMakeLists.txt  ChatService.cpp  ChatService.h  main.cpp
src/DepartServer/: CMakeLists.txt  DepartService.cpp  DepartService.h  main.cpp
src/FriendServer/: CMakeLists.txt  FriendService.cpp  FriendService.h  main.cpp
src/GroupServer/: CMakeLists.txt  GroupService.cpp  GroupService.h  main.cpp
src/LoginServer/: CMakeLists.txt  LoginServer.cpp  LoginService.cpp  LoginService.h  main.cpp
src/MsgServer/: CMakeLists.txt  MsgServer.cpp  MsgServer.h  main.cpp
src/OfflineMsgServer/: CMakeLists.txt  OfflineMsgService.cpp  OfflineMsgService.h  main.cpp
src/UserServer/: CMakeLists.txt  UserServer.cpp  UserServer.h  main.cpp
src/kafka/: KafkaProducer.h  kafkaConsumer.cpp  kafkaConsumer.h  kafkaProducer.cpp  test.cpp  test.h
src/model/: admin.h  adminModel.cpp  adminModel.h  depart.h  departmodel.cpp  departmodel.h  departuser.h  friendmodel.cpp  friendmodel.h  group.h  groupmodel.cpp  groupmodel.h  groupuser.h  msgmodel.cpp  msgmodel.h
src/mysqldb/: mysqldb.cpp  mysqldb.h
src/proto/: ChatMsg.pb.cc  ChatMsg.pb.h  ChatMsg.proto  Depart.pb.cc  Depart.pb.h  Depart.proto  Friend.pb.cc  Friend.pb.h  Friend.proto  Group.pb.cc  Group.pb.h  Group.proto  Login.pb.cc  Login.pb.h  Login.proto  UserMsg.pb.cc  UserMsg.pb.h  UserMsg.proto  offlinemessage.pb.cc  offlinemessage.pb.h  offlinemessage.proto
src/redisdb/: redisdb.cpp  redisdb.h
src/redispb/: redispb.cpp  redispb.h
src/rpc/: CMakeLists.txt  mprpcchannel.cpp  rpcprovider.cpp  zookeeperutil.cpp
src/rpc/include/: logger.h  mprpcchannel.h
src/test/: CMakeLists.txt  test.cpp  test_1.cpp
